# MachineLearning-AI

./: .gitignore  2410.11285v1.pdf:Zone.Identifier  README.md  graphml_env.yml  molecularML.yml  research_env.yml
.github/: FUNDING.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
002_Multi_task_Learning/: 002_Multi_task_Learning.ipynb
003_GradCAM_for_CV/: 003_1_GradCAM_for_Semantic_Segmentation.ipynb  003_2_GradCAM_for_Obj_Detection_Faster_RCNN.ipynb
004_PointNet_Deep_Learning/: 004_1_Classification_Deep_Learning_on_Point_Clouds.ipynb
005_Graph_Neural_Network/: 005_1_GraphNeuralNetworks.ipynb  005_2_GraphNeuralNetworks.ipynb
005_Graph_Neural_Networks/: 005_1_GraphNeuralNetworks.ipynb
006_Graph_Neural_Network_for_Recommender_System/: 006_GNN_on_Recommender_System.ipynb  ydata-ymusic-rating-study-v1_0-test.txt
007_Vision_Transformer/: 007_Vision_Transformer.ipynb
008_GNNs_on_Molecular_ML/: 008_GNNs_on_Molecular_ML_Basics.ipynb
018_Grey_Wolf_Optimizer/: wolf.py  (+4 more)
063_View_Synthesis_Intuition/util/c++/ply_transformer/: CMakeLists.txt
063_View_Synthesis_Intuition/util/c++/ply_transformer/src/: main.cpp
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/: CMakeLists.txt  README.md
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/cmake/modules/: FindGLFW3.cmake  _FindAssimp.cmake
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/include/: camera.h  icl_mesh_transformer.h  icl_renderer.h  mesh.h  mesh_transformer.h  mp_parser.h  renderer.h
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/shader/: color3D.frag  color3D.vs
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/src/icl_nuim/: icl_segmentation_provider.cpp  object_to_color.txt
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/src/mesh_transformer/: icl_mesh_transformer.cpp
063_View_Synthesis_Intuition/util/c++/segmentation_renderer/src/mp_parser/: mp_parser.cpp  segmentation_provider.cpp
(+4974 files in other folders)
